Fix spacing issues in courses.html page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -678,6 +678,10 @@ section#about {
   padding-bottom: 300px;
 }
 
+#virtual-classes.all-courses {
+  padding-bottom: 100px;
+}
+
 #virtual-classes--intro {
   justify-content: space-between;
 }
